--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   easy_localization: ^3.0.1
   adaptive_theme: ^3.1.1
   provider: ^6.0.3
+  pinput: ^2.2.12
 
 dev_dependencies:
   flutter_test:
